--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@types/axios": "^0.14.0",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "postcss": "^8.4.40",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.0",
+    "react-router-dom": "^6.28.0",
     "react-toastify": "^10.0.5",
     "tailwindcss": "^3.4.7"
   },
