--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "emoji-picker-react": "^4.12.0",
     "lucide-react": "^0.460.0",
     "postcss": "^8.4.40",
     "react": "^18.3.1",
@@ -34,6 +35,7 @@
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.28.0",
     "shadcn-ui": "^0.9.3",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.7",
     "tailwindcss-animate": "^1.0.7"
