--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-router-dom": "^6.28.0",
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.28.0",
+    "recharts": "^2.15.0",
     "shadcn-ui": "^0.9.3",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.4",
