--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@lexical/react": "^0.21.0",
+    "@lexical/rich-text": "^0.21.0",
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -24,14 +26,17 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "emoji-picker-react": "^4.12.0",
+    "lexical": "^0.21.0",
     "lucide-react": "^0.460.0",
     "postcss": "^8.4.40",
+    "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.28.0",
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.28.0",
