--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "emoji-picker-react": "^4.12.0",
+    "framer-motion": "^12.4.5",
     "lexical": "^0.21.0",
     "lucide-react": "^0.460.0",
     "postcss": "^8.4.40",
